# hisp

./: README.md  hisp.cabal  lisp2.cabal  test.scm
examples/: differentiate.lsp  factorial.lsp  is-prime.lsp  meta.lsp
lib/: core.lsp  list.lsp
lib/core/: 1.scm  macros.scm
src/: Common.hs  Core.hs  Error.hs  Eval.hs  Macro.hs  Main.hs  Number.hs  Parse.hs  Run.hs  Struct.hs
