cabal-version:      >= 2.0
name:               hisp
version:            0.1.0.0
build-type:         Simple

executable hisp
  main-is:              Main.hs
  other-modules:        Common, Parse, Eval, Core, Error, Run, Number, Struct
  build-depends:        base ^>= 4.14,
                        readline ^>= 1.0.3,
                        text ^>= 1.2.4,
                        containers ^>= 0.6.4,
                        mtl ^>= 2.2.2,
                        megaparsec ^>= 9.0.1,
                        filepath ^>= 1.4.2
  hs-source-dirs:       src
  default-extensions:   OverloadedStrings,
                        LambdaCase
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror -Wcompat -Wincomplete-record-updates
                        -Wincomplete-uni-patterns -Wredundant-constraints -O3
